hphp/test/zend/good/ext/gd/tests/imagefilltoborder_basic.php
<?php
// Create a image 
$image = imagecreatetruecolor( 100, 100 ); 

// Draw a rectangle
imagefilledrectangle( $image, 0, 0, 100, 100, imagecolorallocate( $image, 255, 255, 255 ) );

// Draw an ellipse to fill with a black border
imageellipse( $image, 50, 50, 50, 50, imagecolorallocate( $image, 0, 0, 0 ) );

// Fill border
imagefilltoborder( $image, 50, 50, imagecolorallocate( $image, 0, 0, 0 ), imagecolorallocate( $image, 255, 0, 0 ) );

ob_start(); 
imagepng( $image, null, 9 ); 
$img = ob_get_contents(); 
ob_end_clean();

echo md5(base64_encode($img));

?> 